# File_Ingestion

./: docker-compose.yml  requirements.txt
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/components/home/: DataSourceSelector.css  DataSourceSelector.tsx  FileTable.css  (+9 more)
client/src/pages/: History.css  History.tsx  Home.css  Home.tsx  Profile.css  Profile.tsx
server/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bootstrap_db.py  endpoint.txt  logs.md  plan.md  pyproject.toml  requirements.txt  start.sh
server/alembic/: README  env.py
server/alembic/versions/: 053bf9b73239_add_datasets_and_mappings.py  80422981c893_add_is_deleted_to_datasets.py  9ab1c7d4e2f3_add_dataset_metadata_fields.py  c8f2d6a4b9e1_add_file_ingestion_tables.py  f09f8c95b82f_initial.py
server/src/: main.py
server/src/config/: database.py  redis_server.py
server/src/helpers/: get_env.py  getenv.py  jwt.py
server/src/models/: auth_model.py  file_model.py
server/src/routes/: auth_routes.py  file_routes.py
server/src/schemas/: auth_schema.py  file_schema.py
server/src/services/: auth_services.py  cleanup_scheduler.py  file_services.py
server/tests/benchmark/: benchmark_auth.py
server/tests/integration_tests/: test_auth_api.py  test_file_api.py
server/tests/stress_tests/: auth_stress.js  file_stress.js
server/tests/unit_tests/: test_auth.py  test_cleanups.py  test_docker_env.py  test_file.py
server/uploads/: Detailed_HLD_LLD_Multithreaded_Priority_Task_Scheduler (1).docx
src/config/: database.py
(+8 files in other folders)
