[project]
name = "redis-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "google-auth>=2.0.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
